--- a/landig-red/index.html
+++ b/landig-red/index.html
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#0b0f1a" />
 
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/img/logoperfil.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"
       rel="stylesheet"
